Added Facebook authentication.
This was done with OAuth.io and Python Social Auth as after doing some
reading, this seemed like the easiest and most flexible approach.
Essentially, OAuth.io takes care of authentication on the client side
and the Facebook access token that is received is then send to PSA on
the server to perform double authentication. If this server side
authentication is successful, a Django REST API AuthToken is sent back
to the client and stored in a cookie called beLocalToken for later
authentication with the REST API.

We still need to determine how to categorize certain users as sellers
and others as customers, but I believe Django should allow us to do
this.

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -9,7 +9,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>    
+    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>       
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
@@ -37,7 +37,7 @@
 
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
-    </script>
+    </script>    
 
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -53,6 +53,8 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/oauth-js/dist/oauth.min.js"></script>
+    <script src="bower_components/angular-cookie/angular-cookie.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -60,6 +62,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/directives/navBar.js"></script>
+        <script src="scripts/services/authService.js"></script>
         <!-- endbuild -->
 </body>
 </html>
