--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -23,25 +23,30 @@
 
       <ul class="nav navbar-nav">
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown">Browse <span class="caret"></span></a>
+          <a class="dropdown-toggle pointer" data-toggle="dropdown">Browse <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Fruits</a></li>
+            <li><a href="#">Vegetables</a></li>            
+            <li><a href="#">Preserves</a></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">Vendors</a></li>
           </ul>
         </li>
       </ul>    
 
-      <form name="loginForm" class="navbar-form navbar-right" role="form">      
-        <button type="submit" ng-click="showSignUp()" class="btn btn-primary beLocal-btn">Sign In</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Register</a></li>
-      </ul>      
+      <div ng-hide="AuthService.isAuthenticated()">
+        <form name="loginForm" class="navbar-form navbar-right" role="form">      
+          <button type="submit" ng-click="showLogin()" class="btn btn-primary beLocal-btn">Sign In</button>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Register</a></li>
+        </ul> 
+      </div> 
+      <div ng-show="AuthService.isAuthenticated()">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a class="pointer" ng-click="AuthService.logout()">Sign Out</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
