--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -63,6 +63,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/directives/navBar.js"></script>
         <script src="scripts/services/authService.js"></script>
+        <script src="scripts/services/StateService.js"></script>
         <!-- endbuild -->
 </body>
 </html>
