Updated button position and tab colour

--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -2,9 +2,9 @@
       <img data-src="holder.js/350x300" alt="..." holder-fix>
       <div class="caption">
         <h4>{{item.name}}</h4>
+        <a href="#" class="btn btn-primary btn-more-details" role="button">More Details</a>        
         <p class="price">{{item.price | currency}}</p>
         <h5><small><strong>Sold by: </strong>{{item.vendor.company_name}}</small></h5>
-        <a href="#" class="btn btn-primary" role="button">More Details</a>
       </div>
     </div>
 </div>
