--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div ng-view=""></div>
+    <div ui-view></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -57,6 +57,7 @@
     <script src="bower_components/angular-cookie/angular-cookie.js"></script>
     <script src="bower_components/angular-filter/dist/angular-filter.js"></script>
     <script src="bower_components/holderjs/holder.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>    
     <!-- endbower -->
     <!-- endbuild -->
 
