Fixed the stack overflow exception we were getting
I believe this was caused by the way AngularJS loads states. The
constant loading was initializing the Twitter feed and causing problems
when the code to initialize it was in main.html. Moving it to
index.html seems to have fixed the problem.

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -37,7 +37,9 @@
 
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
-    </script>    
+    </script>
+
+    <script type="text/javascript">(function(){var ticker=document.createElement('script');ticker.type='text/javascript';ticker.async=true;ticker.src='//twitcker.com/ticker/beLocalVictoria.js?speed=12&background=fafafa&tweet=8ed41e&open=true&container=own-container&own-container=twitter-feed';(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(ticker);})();</script>
 
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
