--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -65,6 +65,7 @@
         <script src="scripts/services/authservice.js"></script>
         <script src="scripts/services/stateservice.js"></script>
         <script src="scripts/controllers/seller.js"></script>
+        <script src="scripts/directives/itemmodal.js"></script>
         <!-- endbuild -->
 </body>
 </html>
