--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -55,6 +55,9 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/oauth-js/dist/oauth.min.js"></script>
     <script src="bower_components/angular-cookie/angular-cookie.js"></script>
+    <script src="bower_components/angular-cookie/angular-cookie.js"></script>
+    <script src="bower_components/angular-strap/dist/angular-strap.min.js"></script>
+    <script src="bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -65,7 +68,6 @@
         <script src="scripts/services/authservice.js"></script>
         <script src="scripts/services/stateservice.js"></script>
         <script src="scripts/controllers/seller.js"></script>
-        <script src="scripts/directives/itemmodal.js"></script>
         <!-- endbuild -->
 </body>
 </html>
