Completed UI skeleton for add location modal
This required the addition of a few different libraries
(angular-bootstrap and angular-strap) for the date and time widgets.
Make sure to run bower --install when you pull this!

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -58,6 +58,7 @@
     <script src="bower_components/angular-cookie/angular-cookie.js"></script>
     <script src="bower_components/angular-strap/dist/angular-strap.min.js"></script>
     <script src="bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
