--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -1,11 +1,16 @@
-<div class="thumbnail">
+<div class="thumbnail product-card">
       <!-- <img data-src="holder.js/350x300" alt="..." holder-fix> -->
       <img ng-src="{{item.photo.image_url}}" />
-      <div class="caption">
-        <h4>{{item.name}}</h4>
-        <a href="#" class="btn btn-primary btn-more-details" role="button">More Details</a>        
-        <p class="price">{{item.price | currency}}</p>
-        <h5><small><strong>Sold by: </strong>{{item.vendor.company_name}}</small></h5>
+      <div class="caption trending-caption">
+      	<div
+      	<div class="row">
+	      	<div class="col-lg-7 col-md-7 col-sm-7">
+		        <h4>{{item.name}}</h4>
+		        <h5><small><strong>Sold by: </strong>{{item.vendor.company_name}}</small></h5>
+			</div>
+			<div class="container-md col-lg-5 col-md-5 col-sm-5">
+		        <a href="#" class="btn btn-primary" role="button">More Details</a>
+	        </div>
       </div>
     </div>
 </div>
