--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -78,6 +78,7 @@
         <script src="scripts/services/stateservice.js"></script>
         <script src="scripts/controllers/seller.js"></script>
         <script src="scripts/directives/productcard.js"></script>
+        <script src="scripts/directives/vendorcard.js"></script>
         <!-- endbuild -->
 </body>
 </html>
