--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -9,7 +9,7 @@
 		        <h5><small><strong>Sold by: </strong>{{item.vendor.company_name}}</small></h5>
 			</div>
 			<div class="container-md col-lg-6 col-md-6 col-sm-6">
-		        <a href="#" class="btn btn-primary" role="button">More Details</a>
+		        <a href="#" class="btn beLocal-btn-filled" role="button">More Details</a>
 	        </div>
       </div>
     </div>
