--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -77,6 +77,7 @@
         <script src="scripts/controllers/seller.js"></script>
         <script src="scripts/directives/productcard.js"></script>
         <script src="scripts/directives/vendorcard.js"></script>
+        <script src="scripts/controllers/details.js"></script>        
         <!-- endbuild -->
 </body>
 </html>
