--- a/src/client/app/scripts/directives/vendorCard.html
+++ b/src/client/app/scripts/directives/vendorCard.html
@@ -1,20 +1,15 @@
-<div class="list-group-item">
-	<div class="row">
-      <div class="col-xs-9">
-       	<h4>{{vendor.company_name}}</h4>
+<div class="thumbnail product-card">
+      <!-- <img data-src="holder.js/350x300" alt="..." holder-fix> -->
+      <img ng-src="{{vendor.photo.image_url}}" />
+      <div class="caption trending-caption">
+        <div
+        <div class="row">
+          <div class="col-lg-7 col-md-7 col-sm-7">
+            <h5>{{vendor.company_name}}</small></h5>
+      </div>
+      <div class="container-md col-lg-5 col-md-5 col-sm-5">
+            <a href="#" class="btn btn-primary" role="button">More Details</a>
+          </div>
       </div>
     </div>
-    <div class="well">
-    	<p>
-    		<a href="http://{{vendor.webpage}}">Vendor Website</a>
-    	</p>
-	    <p><b>PHONE:</b>
-	    	{{vendor.phone}}
-	    	<b>EXT:</b>
-	    	{{vendor.extension}}
-	    </p>
-	    <p><b>ADDRESS:</b>123 La La Land, Victoria, BC
-	    </p>
-    </div>
 </div>
-
