Fixed redirect issue
Turns out $location.path doesn’t play nice with href=‘#’.

--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -6,7 +6,7 @@
 	      	<div class="col-lg-6 col-md-6 col-sm-6">
 		        <h4>{{item.name}}</h4>
 
-		        <h5><small><strong>Sold by: </strong><a href="#" ng-click="displayVendor(item.vendor.id)">{{item.vendor.company_name}}</a></small></h5>
+		        <h5><small><strong>Sold by: </strong><a class="pointer" ng-click="displayVendor(item.vendor.id)">{{item.vendor.company_name}}</a></small></h5>
 			</div>
 			<div class="container-md col-lg-6 col-md-6 col-sm-6">
 		        <a href="#" class="btn beLocal-btn-filled" role="button">More Details</a>
