--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -5,12 +5,14 @@
       	<div class="row">
 	      	<div class="col-sm-6">
 		        <h4>{{item.name}}</h4>
-
-		        <h5><small><strong>Sold by: </strong><a class="pointer" ng-click="displayVendor(item.vendor.id)">{{item.vendor.company_name}}</a></small></h5>
 			</div>
 			<div class="container-md col-sm-6">
 		        <a href="#" class="btn beLocal-btn-filled" role="button">More Details</a>
 	        </div>
-      </div>
+	    </div>
+	    <div class="row container-display-vendor-name">
+	    	Sold by: <a class="pointer" ng-click="displayVendor(item.vendor.id)">{{item.vendor.company_name}}</a>
+	    </div>
+      
     </div>
 </div>
