--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -2,14 +2,15 @@
       <!-- <img data-src="holder.js/350x300" alt="..." holder-fix> -->
       <img ng-src="{{item.photo.image_url}}" />
       <div class="caption trending-caption">
-      	<div
+      	
       	<div class="row">
 	      	<div class="col-lg-6 col-md-6 col-sm-6">
 		        <h4>{{item.name}}</h4>
 		        <h5><small><strong>Sold by: </strong>{{item.vendor.company_name}}</small></h5>
 			</div>
 			<div class="container-md col-lg-6 col-md-6 col-sm-6">
-		        <a href="#" class="btn beLocal-btn-filled" role="button">More Details</a>
+		        <button class="btn beLocal-btn-filled" role="button" data-toggle="modal" data-target="#productDetails" ng-click="showProductDetailsModal()">More Details</button>
+	            <div product-details-modal modal-id="productDetails" modal-title="Product Modal" modal-src="scripts/directives/productDetails.js"></div>
 	        </div>
       </div>
     </div>
