--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -11,7 +11,7 @@
 	        </div>
 	    </div>
 	    <div class="row container-display-vendor-name">
-	    	Sold by: <a class="pointer" ng-click="displayVendor(item.vendor.id)">{{item.vendor.company_name}}</a>
+	    	<a class="pointer" ng-click="displayVendor(item.vendor.id)">{{item.vendor.company_name}}</a>
 	    </div>
       
     </div>
