Fixed market cards slightly
Enabled masonry for market cards and also made some minor stylistic
fixes.

Note: Masonry does not get along with Bootstrap’s tabs since it
requires content to be visible before it is able to reconstruct the
masonry grid. As a result, I’ve done something slightly hacky to get
everything working.

--- a/src/client/app/scripts/directives/marketCard.html
+++ b/src/client/app/scripts/directives/marketCard.html
@@ -1,60 +1,26 @@
 <div class="thumbnail market-card">
-      <!-- <img data-src="holder.js/350x300" alt="..." holder-fix> -->
-      <img data-src="holder.js/400x400" alt="..." holder-fix>
-      <div class="caption market-caption">
-
-        <div class="row">
-          <div class="col-sm-12">
-            <h4>{{market.name}}</h4>
-          </div>
-
-
-          <!--<div class="container-md col-lg-6 col-md-6 col-sm-6">
-            <a href="#" class="btn beLocal-btn-filled" role="button">More Details</a>
-          </div>
-        -->
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-6">
-            <h4><small>
-            <!--<button type="button" class="btn btn-default btn-sm">-->
-            <span class="glyphicon glyphicon-map-marker"></span>
-            <!--</button>-->
-            {{market.addr_line1}}, {{market.city}}, {{market.state}}</small></h4>
-          </div>
-
-          <div class="col-lg-6 col-md-6 col-sm-6">
-            <h4>
-            <small>{{market.running_info}}<br>
-              {{market.hours}}
-            </small>
-            </h4>
-
-          </div>
-        </div>
-      </div>
-</div>
-
-
-
-
-<!--
-<div class="market-card">
-	<div class="row">
-      <div class="col-xs-9">
-       	<h4>Market at {{market.addr_line1}}, {{market.city}}</h4>
+  <img data-src="holder.js/300x300" alt="..." holder-fix>
+  <div class="caption market-caption">
+    <div class="row">
+      <div class="col-sm-12">
+        <h4>{{market.name}}</h4>
       </div>
     </div>
-    <div class="well">
-    	<p>
-
-    	</p>
-
-	    <p><b></b>
-	    </p>
-
-	    </p>
+    <div class="row">
+      <div class="col-sm-12">
+        <p class="market-card-text">
+          <span class="glyphicon glyphicon-map-marker"></span>
+          {{market.addr_line1}}, {{market.city}}, {{market.state}}
+        </p>
+      </div>
     </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <p class="market-card-text no-bottom-margin">
+          <span class="glyphicon glyphicon glyphicon-calendar"></span>        
+          {{market.running_info}} | {{market.hours}}
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
--->
