--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -5,7 +5,7 @@
       	<div class="row">
 	      	<div class="col-sm-6">
 		        <h4 class="no-bottom-margin">{{item.name}}</h4>
-	    		<a class="pointer container-display-vendor-name" ng-click="displayVendor(item.vendor.id)">{{item.vendor.company_name}}</a>		        
+	    		<a class="pointer container-display-vendor-name" ng-click="goToVendorDetails(item.vendor.id)">{{item.vendor.company_name}}</a>		        
 			</div>
 			<div class="container-md col-lg-6 col-md-6 col-sm-6">
 		        <button class="btn beLocal-btn-filled" role="button" data-toggle="modal" data-target=".product-details-model" ng-click="showProductDetailsModal(item)">More Details</button>
