Fixed product details modal appearance
There were some styles that didn’t seem to be working when I pulled
last.

--- a/src/client/app/scripts/directives/marketCard.html
+++ b/src/client/app/scripts/directives/marketCard.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
       <div class="col-sm-12">
-        <p class="market-card-text no-bottom-margin">
+        <p class="product-details-text no-bottom-margin">
           <span class="glyphicon glyphicon glyphicon-calendar"></span>        
           {{market.running_info}} | {{market.hours}}
         </p>
