Began database refactor
Changed all models to reflect new ER diagram. There are still several
broken views and serializers, but adding a location from the client
side is working with the new changes in place. Still to come are
view/serialization changes, as well as the ability to add repeating
dates from the UI.

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -15,6 +15,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.min.css" />
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzDc-fu8eUovAbBcxn-Z_UKvVNkg4iucc&sensor=false"></script>    
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
