--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -15,7 +15,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.min.css" />
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzDc-fu8eUovAbBcxn-Z_UKvVNkg4iucc&sensor=false"></script>    
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzDc-fu8eUovAbBcxn-Z_UKvVNkg4iucc&sensor=false&region=ca"></script>    
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
