Added skeleton welcome screen.

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -20,6 +20,9 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <!-- endbower -->
     <!-- endbuild -->
+    <!-- build:css({.tmp,app}) styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
   </head>
   <body>
     <!--[if lt IE 7]>
