Added an already exists modal and hooked up register drop down.

--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -39,7 +39,13 @@
           <button type="submit" ng-click="showLogin()" class="btn btn-primary beLocal-btn">Sign In</button>
         </form>
         <ul class="nav navbar-nav navbar-right">
-          <li><a ng-click="createCustomer()">Register</a></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle pointer" data-toggle="dropdown">Register <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a class="pointer" ng-click="showCustomerSignUp()">As a Customer</a></li>
+              <li><a class="pointer" ng-click="showFarmerSignUp()">As a Farmer or Foodmaker</a></li>
+            </ul>
+          </li>
         </ul> 
       </div> 
       <div ng-show="AuthService.isAuthenticated()">
