Added cookie for welcome screen.

--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -23,7 +23,7 @@
 
       <ul class="nav navbar-nav">
         <li class="dropdown">
-          <a class="dropdown-toggle pointer" data-toggle="dropdown">Browse <span class="caret"></span></a>
+          <a class="dropdown-toggle pointer">Browse <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Fruits</a></li>
             <li><a href="#">Vegetables</a></li>            
@@ -40,7 +40,7 @@
         </form>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a class="dropdown-toggle pointer" data-toggle="dropdown">Register <span class="caret"></span></a>
+            <a class="dropdown-toggle pointer">Register <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a class="pointer" ng-click="showCustomerSignUp()">As a Customer</a></li>
               <li><a class="pointer" ng-click="showFarmerSignUp()">As a Farmer or Foodmaker</a></li>
