--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/directives/vendorcard.js"></script>
         <script src="scripts/directives/marketcard.js"></script>
         <script src="scripts/controllers/details.js"></script>        
+        <script src="scripts/controllers/typeahead.js"></script>
         <!-- endbuild -->
 </body>
 </html>
