--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -10,8 +10,9 @@
       <a class="navbar-brand" href="#">be<span class="beLocal-highlight">Local</span></a>
       <form class="navbar-form navbar-left beLocal-search" role="search">
         <div class="form-group">
-          <div class="input-group">
-            <input type="text"  placeholder="Search for vendors or products" class="form-control">
+          <div class="input-group" ng-controller="TypeaheadCtrl">
+            <input type="text" ng-model="search" placeholder="Search for vendors or products" class="form-control"
+              typeahead="product for product in getProductSuggestions($viewValue)">
             <span class="input-group-btn">
               <button class="btn beLocal-btn-filled" type="button">Search</button>
             </span>
