Added My Account button for customers and vendors
Currently, this does nothing for customers. It should probably also be
a dropdown in the future once we have more user options.

--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -50,6 +50,7 @@
       </div> 
       <div ng-show="AuthService.isAuthenticated()">
         <ul class="nav navbar-nav navbar-right">
+          <li><a class="pointer" ng-click="displayAccountPage()">My Account</a></li>        
           <li><a class="pointer" ng-click="AuthService.logout()">Sign Out</a></li>
         </ul>
       </div>
