--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -1,4 +1,4 @@
-<div class="thumbnail product-card">
+<div class="thumbnail product-card" ng-model="item">
       <img ng-src="{{item.photo.image_url}}" />
       <div class="caption trending-caption">
 
@@ -9,7 +9,8 @@
 			</div>
 			<div class="container-md col-lg-6 col-md-6 col-sm-6">
 		        <button class="btn beLocal-btn-filled" role="button" data-toggle="modal" data-target=".product-details-model" ng-click="showProductDetailsModal(item)">More Details</button>
-                <button class="btn btn-primary" role="button" ng-click="likeUnLikeProduct(item.id, item.isLiked)" ng-disabled="likeDisabled">
+                
+                <button class="btn btn-primary" role="button" ng-click="likeUnLikeProduct(item)" ng-disabled="likeDisabled">
                     <span class="glyphicon glyphicon-heart"></span> 
                     <span ng-hide="item.isLiked"> Like </span>
                     <span ng-show="item.isLiked"> Liked </span> 
