--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -10,11 +10,11 @@
 			<div class="container-md col-lg-6 col-md-6 col-sm-6">
 		        <button class="btn beLocal-btn-filled" role="button" data-toggle="modal" data-target=".product-details-model" ng-click="showProductDetailsModal(item)">More Details</button>
                 
-                <button class="btn btn-primary" role="button" ng-click="likeUnLikeProduct(item)" ng-disabled="likeDisabled">
+                <button class="btn btn-default btn-sm like-button" role="button" ng-click="likeUnLikeProduct(item)" ng-disabled="likeDisabled">
                     <span class="glyphicon glyphicon-heart"></span> 
                     <span ng-hide="item.isLiked"> Like </span>
                     <span ng-show="item.isLiked"> Liked </span> 
-                    <span ng-show="item.vote_total > 0"> {{item.vote_total}} </span> 
+                    <span class="like-count" ng-show="item.vote_total > 0"> {{item.vote_total}} </span> 
                 </button>
 	        </div>
 	    </div>      
