--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -9,14 +9,16 @@
 			</div>
 			<div class="container-md col-lg-6 col-md-6 col-sm-6">
             <!-- <button class="btn beLocal-btn-filled" role="button" data-toggle="modal" data-target=".product-details-model" ng-click="showProductDetailsModal(item)">More Details</button>-->
-            <button ng-disabled="likeDisabled" ng-click="likeUnLikeProduct(item)" type="button" class="btn btn-default beLocal-btn-default">
+            <div data-toggle="tooltip" style="display:inline-block" data-placement="bottom" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
+              <button ng-disabled="likeDisabled" ng-click="likeUnLikeProduct(item)" type="button" class="btn btn-default beLocal-btn-default">
                   <span class="glyphicon glyphicon-heart like-button" ng-class="{'like-button-liked' : item.is_liked}"></span>
                   <span ng-hide="item.is_liked">Like</span>
                   <span ng-show="item.is_liked">Unlike</span>
-                <span class="like-container" ng-show="item.vote_total > 0">
-                  {{item.vote_total}}
-                </span>
-            </button>
+                  <span class="like-container" ng-show="item.vote_total > 0">
+                    {{item.vote_total}}
+                  </span>
+              </button>
+            </div>
 	        </div>
 	    </div>      
     </div>
