Changed the look of the product cards

--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -4,7 +4,7 @@
 
       	<div class="row">
 	      	<div class="col-sm-6">
-		        <h4 class="no-bottom-margin"><a class="pointer vendor-card-name" data-toggle="modal" data-target=".product-details-model" ng-click="showProductDetailsModal(item)">{{item.name}}</a></h4>
+		        <h4 class="no-bottom-margin no-top-margin"><a class="pointer vendor-card-name" data-toggle="modal" data-target=".product-details-model" ng-click="showProductDetailsModal(item)">{{item.name}}</a></h4>
 	    		<a class="pointer container-display-vendor-name" ng-click="displayVendor(item.vendor.id)">{{item.vendor.company_name}}</a>		        
 			</div>
 			<div class="container-md col-lg-6 col-md-6 col-sm-6">
