--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -1,5 +1,5 @@
 <div class="thumbnail product-card" ng-model="item">
-      <img ng-src="{{item.photo.image_url}}" />
+      <img ng-src="{{item.photo.image_url}}" class="pointer vendor-card-name" data-toggle="modal" data-target=".product-details-model" ng-click="showProductDetailsModal(item)"/>
       <div class="caption trending-caption">
 
         <div class="row">
