Added new favicon, edited vendor cards, and added new logo to splash page.

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -23,7 +23,8 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
+    <!-- endbuild -->   
+    <link rel="icon" type="image/png" href="favicon.png">
   </head>
   <body>
     <!--[if lt IE 7]>
