--- a/src/client/app/scripts/directives/marketCard.html
+++ b/src/client/app/scripts/directives/marketCard.html
@@ -16,8 +16,7 @@
     </div>
     <div class="row">
       <div class="col-sm-12">
-        <p class="product-details-text no-bottom-margin">
-          {{openString}}
+        <p class="market-card-text no-bottom-margin" ng-bind-html="openString">
         </p>
       </div>
     </div>
