Fixed vendor card hit box.

--- a/src/client/app/scripts/directives/vendorCard.html
+++ b/src/client/app/scripts/directives/vendorCard.html
@@ -25,10 +25,10 @@
       </div>
     </div>
     <div class="col-sm-1 no-padding">
-      <div class="vendor-image-container">
-        <div class="vendor-images pointer center bold-hover" ng-click="displayVendor(vendor.id)" style="">
+      <div class="vendor-image-container pointer" ng-click="displayVendor(vendor.id)">
+        <div class="center bold-hover" style="">
           <h3 class="logo-green plain-text-font" > {{vendor.products.length}} </h3>
-          <h4 class="header-font"> items </div>
+          <h4 class="header-font" style="padding-bottom:15px"> items </div>
         </div>
       </div>
     </div>
@@ -58,10 +58,10 @@
       </div>
     </div>
     <div class="col-sm-1 no-padding">
-      <div class="vendor-image-container">
-        <div class="vendor-images pointer center bold-hover" ng-click="displayVendor(vendor.id)" style="">
+      <div class="vendor-image-container pointer" ng-click="displayVendor(vendor.id)">
+        <div class="center bold-hover" style="">
           <h3 class="logo-green plain-text-font" > {{vendor.products.length}} </h3>
-          <h4 class="header-font"> items </div>
+          <h4 class="header-font" style="padding-bottom:15px"> items </div>
         </div>
       </div>
     </div>
